# EarthReach

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
docs/: Makefile  index.rst
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
notebooks/: earthkit_plots_exploration.py  example.ipynb
src/earth_reach/: __init__.py  cli.py  main.py
src/earth_reach/config/: __init__.py  criteria.py  logging.py
src/earth_reach/core/: __init__.py  data_extractor.py  evaluator.py  generator.py  llm.py  orchestrator.py  utils.py
src/earth_reach/core/extractors/: __init__.py  base_extractor.py  pressure_extractor.py  temperature_extractor.py
src/earth_reach/core/prompts/: __init__.py  evaluator.py  generator.py  orchestrator.py
src/earth_reach_agent/: cli.py  main.py
src/earth_reach_agent/config/: criteria.py  logging.py
src/earth_reach_agent/core/: data_extractor.py  evaluator.py  generator.py  llm.py  orchestrator.py  prompts.py  utils.py
src/earth_reach_agent/core/prompts/: criteria.py  evaluator.py  generator.py  orchestrator.py
src/tests/: __init__.py
vllm/: .env.example  Caddyfile  Dockerfile  docker-compose.yaml  setup.md  setup.sh  test.sh
