[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "earth-reach"
version = "0.1.0"
description = "EarthReach Agent: Dual-LLM Framework for Validated Meteorological Chart Descriptions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthkit>=0.10.3",
    "earthkit-data>=0.13.8",
    "earthkit-plots>=0.3.1",
    "openai>=1.77.0",
    "python-dotenv>=1.1.0",
    "hatchling>=1.27.0",
    "fire @ git+https://github.com/google/python-fire.git@2025-03-23-ipython", # Fixes IPython v9.0 compatibility issue
]

[dependency-groups]
dev = [
    "jupytext>=1.17.1",
    "ipykernel>=6.29.5",
    "ruff>=0.12.7",
    "pytest>=8.3.5",
    "pre-commit>=4.0.1",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=1.27.0",
]
claude = [
    "anthropic>=0.60.0",
]
all-models = [
    "google-genai>=1.27.0",
    "anthropic>=0.60.0"
]

[project.scripts]
earth-reach-agent = "earth_reach.cli:cli"
era = "earth_reach.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/earth_reach"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
